# gjira

./: pytest.ini  requirements.txt  setup.cfg  test_requirements.txt
tests/: test_commands.py  test_ejira.py  test_git.py  test_main.py
